@@ -268,6 +268,9 @@ Version CVS HEAD (?)
       instruments were uselessly precached with zero samples, however it still
       took the full preloading time and on 1st program change the respective
       instrument was completely reloaded again.
+    - fixed handling of rapid bank select and program change messages
+      sent to the same sampler channel (patch from the Open Octave
+      project, slightly adjusted)
 
 Version 1.0.0 (31 July 2009)
 
